Buttons added for image choices. Buttons for computer are disabled, allowing them to be styled the same as the players buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
 body {
     background-color: lightseagreen; /* just to check it is working */
 }
+
+
+.player-choices-buttons {
+    width: 50px;
+}
+
+.player-choices-images {
+    width: 50%;
+}
