--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,14 +18,23 @@ button {
     border: none;
 }
 
+button:not([disabled]) {
+    transition: background-color 0.4s ease;
+}
+
 #player-1-choices > button {
     width: 25%;
     margin: 2%;
 }
 
 #computer-choice > button {
-    width: 37.5%;
-    margin: 3%;
+    width: 45%;
+    margin: 5%;
+}
+
+button:not([disabled]):hover {
+    background-color: seagreen;
+    transition: background-color 0.4s ease;
 }
 
 .player-choices-images {
@@ -40,7 +49,7 @@ button {
         justify-content: space-evenly;
         align-items: center;
         align-content: space-evenly;
-        border: 0px 20px;
+        margin: 0px 20px;
     }
 
 .player-area {
@@ -50,7 +59,6 @@ button {
         justify-content: space-evenly;
         align-items: center;
         align-content: center;
-        width: 50%;
                     text-align: center;
 }
 
