--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,9 @@ button:not([disabled]) {
 
 #player-1-choices > button {
     width: 25%;
-    margin: 2%;
+    margin: 1%;
+    padding: 1%;
+
 }
 
 #computer-choice > button {
@@ -49,7 +51,7 @@ button:not([disabled]):hover {
         justify-content: space-evenly;
         align-items: center;
         align-content: space-evenly;
-        margin: 0px 20px;
+        margin: 0px 5%;
     }
 
 .player-area {
@@ -84,8 +86,14 @@ h1, h2, h3 {
     width: 100%
 }
 
-/* adding a blue border to players choice once clicked to highlight */
-.clicked-player-choice {
-    border: 3px solid blue;
-    filter: blur(5px);
+.win-border {
+    border: 3px solid lime;
+}
+
+.lose-border {
+    border: 3px solid red;
+}
+
+.draw-border {
+    border: 3px solid grey;
 }
