--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ button:not([disabled]):hover {
         justify-content: space-evenly;
         align-items: center;
         align-content: space-evenly;
-        margin: 0px 5%;
+        margin: 0;
     }
 
 .player-area {
