start game and game over popup boxes added. start of playing against a friend game added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@ body {
     background-color: lightseagreen; /* just to check it is working */
 }
 
+.game-container {
+    display: none;
+}
+
 .player-choices {
     display: flex;
     flex-direction: row;
