--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ button:not([disabled]) {
     transition: background-color 0.4s ease;
 }
 
-#player-1-choices > button {
+#player-choices > button {
     width: 25%;
     margin: 1%;
     padding: 1%;
@@ -68,7 +68,7 @@ button:not([disabled]):hover {
                     text-align: center;
 }
 
-#player-1-area {
+#player-area {
     width: 60%;
 }
 
