--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightseagreen; /* just to check it is working */
+    background-color: lightseagreen; 
 }
 
 .game-container {
@@ -26,7 +26,7 @@ button:not([disabled]) {
     transition: background-color 0.4s ease;
 }
 
-#player-choices > button {
+.player-choices > button {
     width: 25%;
     margin: 1%;
     padding: 1%;
@@ -85,7 +85,6 @@ h1, h2, h3 {
 }
 
 
-
 .player-heading {
     width: 100%
 }
@@ -100,4 +99,8 @@ h1, h2, h3 {
 
 .draw-border {
     border: 5px solid lightgrey;
+}
+
+.chosen-border {
+    border: 5px solid white;
 }
