--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,33 @@
-body {
+/* body {
     background-color: lightseagreen; 
+} */
+
+body {
+    background-color: lightseagreen;
+    background-image: linear-gradient(to right, rgb(27, 145, 139), rgb(41, 232, 232));
+    background-size: 100% 100%;
 }
+
+/* body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: url('path/to/your-pattern.png') repeat; Replace 'path/to/your-pattern.png' with the path to your pattern image 
+    opacity: 0.1; Adjust the opacity to control the pattern visibility 
+} */
 
 a {
     text-decoration: none;
     color: inherit
+}
+
+a > h1:hover {
+    background-color: seagreen;
+    transition: background-color 0.4s ease;
 }
 
 .game-container {
@@ -27,9 +50,9 @@ button {
     border: none;
 }
 
-button:not([disabled]) {
+/* button:not([disabled]) {
     transition: background-color 0.4s ease;
-}
+} */
 
 .player-choices > button {
     width: 25%;
