--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: max(3vw, 30px);
+    font-size: max(3.5vw, 30px);
     margin: 5px;
 }
 
@@ -250,8 +250,14 @@ p {
 
     body > #start-game-box, body > #game-over-box {
         button {
-            font-size: 1.2em !important;
+            font-size: 1.2em;
         }
+    }
+
+    .play-game-box, .score-area:not(#score-area) {
+        button {
+            font-size: 1.2em;
+      }
     }
 
     .player-area {
@@ -277,10 +283,21 @@ p {
 
 
     #computer-area {
-    display: grid !important;
+    /* display: grid; */
     grid-template-areas: 
         'heading result'
         'choice score';
+    }
+
+    #player-1-area { grid-area: one; }
+    #player-2-area { grid-area: two; }
+    #score-area-2p { grid-area: scoretwo; }
+
+    #game-area {
+    /* display: grid; */
+    grid-template-areas: 
+        'one scoretwo'
+        'two scoretwo';
     }
 
     #computer-choice > button {
