--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ button:not([disabled]):hover {
     font-size: 1.3em;
 }
 
-#instructions button {
+#instructions button, footer button {
     text-align: center;
     font-weight: bold;
     border: 5px solid seagreen;
