--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,12 @@ a>h1:hover {
     transition: background-color 0.4s ease;
 }
 
+.button-subheading {
+    font-size: 75%;
+    font-weight: 200;
+    font-style: italic;
+}
+
 /* In-game styling */
 .game-container {
     display: none;
